Fix form spacing

--- a/styles.css
+++ b/styles.css
@@ -75,16 +75,18 @@
     font-family: 'Ubuntu', sans-serif;
     color: lightgray;
     font-size: 1.5rem;
+    margin-bottom: 1.5rem;
 }
 
 label {
     display: inline-block;
     color: lightgray;
+    margin-bottom: 0.5rem;
 }
 
 input {
     width: 90%;
-
+    margin-bottom: 1rem;
 }
 
 form {
